codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__command_popup__tests__command_popup_workflow_completion_failure.snap
---
source: tui/src/bottom_pane/command_popup.rs
expression: render_popup(&popup)
---
Buffer {
    area: Rect { x: 0, y: 0, width: 72, height: 1 },
    content: [
        "› /code-review  Run a code review workflow.                             ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 16, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 43, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
    ]
}
