codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__command_popup__tests__command_popup_workflow_schema_enum_value.snap
---
source: tui/src/bottom_pane/command_popup.rs
expression: render_popup(&popup)
---
Buffer {
    area: Rect { x: 0, y: 0, width: 72, height: 2 },
    content: [
        "› /code-review             Run a code review workflow.                  ",
        "    --action list-reports  Run mode.                                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 27, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 54, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 36, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
