codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__command_popup__tests__workflow_exact_command_dynamic_suggestions.snap
---
source: tui/src/bottom_pane/command_popup.rs
expression: "render_popup(&popup, 88)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 88, height: 3 },
    content: [
        "  /code-review                         Code Review                                      ",
        "    --report-id 1034 --format summary  Focused summary output                           ",
        "    --report-id 1035 --format full     Expanded report output                           ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 50, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 61, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 61, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
