codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__command_popup__tests__workflow_exact_command_options.snap
---
source: tui/src/bottom_pane/command_popup.rs
expression: "render_popup(&popup, 88)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 88, height: 4 },
    content: [
        "  /code-review               Code Review                                                ",
        "    --review-id <string>     required · Review identifier                               ",
        "    --format <summary|full>  Output format                                              ",
        "    --include-comments       Include comment bodies                                     ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 57, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 51, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
